fix overflows + remove broken image icon in Safari

--- a/src/app/modules/user/views/user-insight-domain/user-insight-domain.component.scss
+++ b/src/app/modules/user/views/user-insight-domain/user-insight-domain.component.scss
@@ -55,7 +55,7 @@
       text-align: center;
       border-radius: 3px;
       margin-right: 10px;
-
+      flex: 0 0 auto;
       &.kIconfile-small {
         width: auto !important;
         height: auto !important;
