--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -411,6 +411,7 @@ p-multiselect ::ng-deep {
 
 .p-carousel-item {
   background-color: #FFFFFF !important;
+  overflow: hidden;
 }
 
 .dot {
